# account-creation-mail-service

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  dev.cmd  main.py  pyproject.toml  setup.ps1
any-auto-register/: docker-compose.yml
any-auto-register/api/: config.py
any-auto-register/core/: base_mailbox.py
any-auto-register/frontend/src/pages/: Settings.tsx
any-auto-register/tests/: test_chatgpt_oauth_session_provenance.py
config/: config.yaml  mail.yaml
docker/: init.sql
docs/: README.md  enterprise-standards.md  mail.md  mailslurp-research.md
src/config/: settings.py
src/core/: logger.py  storage.py
src/core/database/: _engine.py  _mailboxes.py  _migrations.py
src/mail/: _base.py  circuit_breaker.py  client.py
src/mail/providers/: __init__.py  aar_adapter.py  gmail.py  guerrillamail_com.py  mailosaur_com.py  mailslurp_com.py  sms_webhook.py  testmail_app.py
src/mail_service/: mailbox_client.py  providers_client.py  server.py  sms_client.py
src/mail_service/routers/: providers.py  sms.py
src/mail_service/services/: mailbox_service.py  mailbox_store.py
tests/: conftest.py  test_circuit_breaker.py  test_config.py  test_mailbox_store.py  test_smoke.py
