[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-service"
version = "1.0.0"
description = "Mail provider management service."
requires-python = ">=3.10"
dependencies = [
    "account-creation-common",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0",
    "requests>=2.31.0",
    "aioimaplib>=2.0.0",
    "aiofiles>=23.0.0",
    "playwright>=1.50.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "BLE001", "E722", "UP", "RUF"]
ignore = ["E501", "UP007", "RUF006", "RUF001", "RUF002", "RUF003", "RUF022"]

[tool.pytest.ini_options]
pythonpath = ["src", "../common/src"]
